Fix limit_toggler overlap on Contao 5.5

--- a/public/backend.css
+++ b/public/backend.css
@@ -10,3 +10,6 @@
 .limit_toggler{
 	z-index: 2;
 }
+.tl_content_right:has(.operations-menu.show){
+	z-index: 3
+}
